<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

  <EditText
      android:id="@+id/question"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="52dp"
      android:hint="Favorite PCPS contact?"
      android:inputType="text"
      android:textColor="#A69E9E"
      android:textSize="25sp"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email"
      tools:text="Favorite PCPS contact?" />

  <TextView
      android:id="@+id/app_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:fontFamily="@font/android101_el3e"
      android:text="Music Colab"
      android:textAlignment="center"
      android:textSize="60sp"
      android:textStyle="bold"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/phrase"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/make_music_with_friends"
      android:textAlignment="center"
      android:textSize="25sp"
      android:textStyle="italic"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/app_name" />

  <TextView
      android:id="@+id/register2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/register"
      android:textAlignment="center"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintHorizontal_bias="0.488"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/phrase" />

  <EditText
      android:id="@+id/username"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:hint="@string/username"
      android:inputType="textEmailAddress"
      android:textSize="25sp"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register2" />

  <EditText
      android:id="@+id/email"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:hint="@string/email_address"
      android:inputType="textEmailAddress"
      android:textSize="25sp"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/username" />

  <EditText
      android:id="@+id/password"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:textSize="25sp"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email" />

  <Button
      android:id="@+id/registerr"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="76dp"
      android:text="@string/register"
      app:layout_constraintHorizontal_bias="0.501"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password" />

  <TextView
      android:id="@+id/aboutt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="30dp"
      android:text="@string/about"
      android:textAlignment="center"
      android:textSize="20sp"
      android:textStyle="italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
