<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

  <EditText
      android:id="@+id/questionForgot"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="50dp"
      android:layout_marginTop="48dp"
      android:hint="Favorite PCPS contact?"
      android:inputType="textPassword"
      android:textSize="20sp"
      app:layout_constraintHorizontal_bias="0.505"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email" />

  <TextView
      android:id="@+id/app_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/android101_el3e"
      android:text="Music Colab"
      android:textAlignment="center"
      android:textSize="60sp"
      android:textStyle="bold"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/phrase"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/make_music_with_friends"
      android:textAlignment="center"
      android:textSize="25sp"
      android:textStyle="italic"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/app_name" />

  <TextView
      android:id="@+id/register2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:text="Reset Password"
      android:textAlignment="center"
      android:textSize="25sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/phrase" />

  <EditText
      android:id="@+id/username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="50dp"
      android:hint="@string/username"
      android:inputType="textEmailAddress"
      android:textSize="20sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register2" />

  <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="50dp"
      android:hint="@string/email_address"
      android:inputType="textEmailAddress"
      android:textSize="20sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/username" />

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="50dp"
      android:hint="New Password"
      android:inputType="textPassword"
      android:textSize="20sp"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email" />

  <Button
      android:id="@+id/reset"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="148dp"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:text="reset"
      android:textSize="20sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password" />

  <TextView
      android:id="@+id/aboutt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="30dp"
      android:text="@string/about"
      android:textAlignment="center"
      android:textSize="20sp"
      android:textStyle="italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
