<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lobby">

    <ImageButton
        android:id="@+id/disconnect"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/loop"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Here is gonna be the Instrument Visualisation Area"
            android:textSize="25sp" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#C3424242"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/admin_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_access"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/admin_boolean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" true"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/admin_msg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/server_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_joined_server"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/admin_msg" />

        <TextView
            android:id="@+id/server_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/server_msg"
            app:layout_constraintTop_toBottomOf="@id/admin_boolean" />

        <TextView
            android:id="@+id/members_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Members in Server: "
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/server_msg" />

        <TextView
            android:id="@+id/members_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/members_msg"
            app:layout_constraintTop_toBottomOf="@id/server_number" />

        <TextView
            android:id="@+id/instrument_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Instrument: "
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/members_msg" />

        <TextView
            android:id="@+id/instrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Theremin"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/instrument_msg"
            app:layout_constraintTop_toBottomOf="@id/members_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <Button
        android:id="@+id/loop"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:text="@string/loop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/calibrate"
        app:layout_constraintBottom_toBottomOf="parent" />


    <Button
        android:id="@+id/calibrate"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:text="@string/calibrate"
        app:layout_constraintLeft_toRightOf="@id/loop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>
